    - Renamed technology "splitter-logistics" to "omnitech-splitter-logistics"
    - Renamed technology "basic-splitter-logistics" to "omnitech-basic-splitter-logistics"
    - Renamed technology "underground-logistics" to "omnitech-underground-logistics"
    - Renamed technology "basic-underground-logistics" to "omnitech-basic-underground-logistics"
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2020.08.24
  Bugfixes:
    - Fixed omnium-power techs not using science packs with omnimatter science
    - Fixed omnium-power techs not beeing affected by omnimatter science omni multiplier
    - Fixed crystal solar panels not having a placable result since 2.0.0
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2020.08.22
  Info:
    - Updated for Factorio version 1.0.0
  Features:
    - Added recipes to upgrade max size crystal solar panels to the next tier
  Changes:
    - Rebalanced crystal solar panel recipes
    - Added the required crystallonics tech as prereq for each new tier of crystal solar panels
    - Made the Omnifurnace mk2 and mk3 recipe slightly cheaper
---------------------------------------------------------------------------------------------------
Version: 1.18.11
Date: 2020.08.07
  Changes:
    - Made the omnifurnace mk 3 electric
    - Moved fuel related functions into omnilib
  Bugfixes:
    - Fixed multiple locale, subgroup and recipe order issues
---------------------------------------------------------------------------------------------------
Version: 1.18.11
Date: 2020.08.07
  Changes:
    - Made the omnifurnace mk 3 electric
    - Moved fuel related functions into omnilib
  Bugfixes:
    - Fixed multiple locale, subgroup and recipe order issues
---------------------------------------------------------------------------------------------------
Version: 1.18.10
Date: 2020.07.14
  Features: